:lipstick: #16 Fix spacing

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -18,9 +18,22 @@ h1, h2
 
 h1
   font-size: 40px
+  line-height: 40px
+  //font-size: 2em
+  font-weight: bold
 
-h2, h3
-  font-size: 30px
+//h2, h3
+  //font-size: 30px
+
+h2
+  font-size: 1.5em
+  line-height: 1.5em
+  font-weight: bold
+
+h3
+  font-size: 1.17em
+  line-height: 1.17em
+  font-weight: bold
 
 strong
   color: $secondary
